# stinky-noodle

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: pr.yml  publish.yml  tag.yml
src/stinky/noodle/: core.py
src/stinky/noodle/utils/: __init__.py  builtins.py  enforcer.py  exceptions.py  parser.py  ruleset.py
tests/: test_builtins.py
